<resources>
    <string name="app_name">Attendance Tracker</string>
    <string name="title_subjectsList">Subjects</string>
    <string name="title_addSubject">Add Subject</string>
    <string name="title_settings">Settings</string>
    <string name="title_developer">Developer</string>

    <string name="label_required">Required</string>
    <string name="label_attend">Attend</string>
    <string name="label_attended">Attended</string>
    <string name="label_skip">Skip</string>
    <string name="label_skipped">Skipped</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_cancelled">Cancelled</string>
    <string name="label_subjectFilter">Subject Filter</string>
    <string name="label_clear">Clear</string>
    <string name="label_add">Add</string>
    <string name="label_edit">Edit</string>
    <string name="label_archive">Archive</string>
    <string name="label_set">Set</string>
    <string name="label_prefThreshold">Default threshold</string>
    <string name="label_countCancelled">Count cancelled</string>
    <string name="label_subjects">Subjects</string>
    <string name="label_settings">Settings</string>
    <string name="label_developer">Developer</string>
    <string name="label_setAttendance">Set Attendance</string>
    <string name="label_removeAttendance">Remove attendance</string>
    <string name="label_requiredThreshold">Required attendance threshold</string>
    <string name="label_classesAttended">Classes attended</string>
    <string name="label_classesSkipped">Classes skipped</string>
    <string name="label_classesCancelled">Classes cancelled</string>
    <string name="label_rateApp">Rate App!</string>

    <string name="hint_subjectName">Enter subject name</string>

    <string name="desc_prefThreshold">The default threshold for each new subject</string>
    <string name="desc_prefCountCancelled_off">Cancelled classes are not counted as skipped</string>
    <string name="desc_prefCountCancelled_on">Cancelled classes are counted as skipped</string>

    <string name="contentDesc_attend">Button to mark class as attended</string>
    <string name="contentDesc_skip">Button to mark class as skipped</string>
    <string name="contentDesc_cancel">Button to mark class as cancelled</string>
    <string name="contentDesc_openWebsite">Show my other creations</string>
    <string name="contentDesc_addSubject">Add a new subject</string>

    <string-array name="subjectFilterItems">
        <item>Current</item>
        <item>Archived</item>
    </string-array>

    <string name="value_requiredAttendance">%1$d%%</string>

    <string name="message_requiredAttendance">%1$d%% Required</string>
    <string name="message_attendance_canSkip">Classes you can safely skip: %1$d</string>
    <string name="message_attendance_needAttend">Classes you need to attend: %1$d</string>
    <string name="message_widget_lagging">Classes you are lagging in: %1$d</string>
    <string name="message_attendance_noCurrentSubjects">There appears to be no current subjects available.\nTry to add a subject from the menu.</string>
    <string name="message_attendance_noSubjectsForCurrentFilter">There appears to be no subjects for the applied filter.\nTry adding a new subject.</string>
    <string name="message_futureDate">You cannot set/edit a future date\'s attendance.</string>
    <string name="message_setEditAttendance">Set attendance for %1$s</string>
    <string name="message_developerDetails">Greetings, and thanks for using my application.\nTo discuss anything interesting under the sky, reach out to me. I am eager to hear from you.\n- Varun Barad</string>

    <string name="PREFS_KEY_THRESHOLD" translatable="false">default_threshold</string>
    <string name="PREFS_KEY_COUNT_CANCELLED" translatable="false">count_cancelled</string>
</resources>
