<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_subjects"
        android:icon="@drawable/ic_subjects"
        android:orderInCategory="100"
        android:title="@string/label_subjects"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="200"
        android:title="@string/label_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_developer"
        android:icon="@drawable/ic_developer"
        android:orderInCategory="300"
        android:title="@string/label_developer"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_rateApp"
        android:icon="@drawable/ic_star"
        android:orderInCategory="400"
        android:title="@string/label_rateApp"
        app:showAsAction="never"/>
</menu>