<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin">

    <TextView
        android:id="@+id/textView_widget_classesLagging"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical|start"
        android:padding="4dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
        android:textColor="@color/colorText"
        tools:text="Classes you are lagging in: 5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_widget_attend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/contentDesc_attend"
            android:src="@drawable/ic_attend_png"
            android:theme="@style/ButtonAttendStyle"/>

        <ImageButton
            android:id="@+id/button_widget_skip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/contentDesc_skip"
            android:src="@drawable/ic_skip_png"
            android:theme="@style/ButtonSkipStyle"/>

        <ImageButton
            android:id="@+id/button_widget_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/contentDesc_cancel"
            android:src="@drawable/ic_cancel_png"
            android:theme="@style/ButtonCancelStyle"/>
    </LinearLayout>
</LinearLayout>