<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".about.DeveloperActivity">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.NoActionBar.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.NoActionBar.PopupOverlay"
                app:title="@string/title_developer"/>
        </android.support.design.widget.AppBarLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ED4926"
            android:paddingBottom="@dimen/margin_activityVertical"
            android:paddingEnd="@dimen/margin_activityHorizontal"
            android:paddingStart="@dimen/margin_activityHorizontal"
            android:paddingTop="@dimen/margin_activityVertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/profilePicture"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:adjustViewBounds="false"
                android:scaleType="centerInside"
                android:src="@drawable/developer_profile"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/message_developerDetails"
                android:textColor="@color/colorText"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profilePicture"
                tools:text="Something done is better than best thing only planned."/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/openWebsite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/contentDesc_openWebsite"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>