<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:contentPadding="8dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/background"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/subjectName"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/subjectName"
                tools:background="@drawable/bg_circular_attend"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/subjectName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="0dp"
                android:layout_marginStart="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Algorithms"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/totalClasses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="4dp"
                android:layout_marginStart="0dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintBottom_toBottomOf="@+id/subjectName"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/subjectName"
                tools:text="19"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/threshold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                app:layout_constraintLeft_toLeftOf="@+id/subjectName"
                app:layout_constraintTop_toBottomOf="@+id/subjectName"
                tools:text="75% Required"/>

            <android.support.v4.widget.Space
                android:id="@+id/space"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/threshold"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textView_attend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/button_attend"
                app:layout_constraintRight_toRightOf="@+id/button_attend"
                app:layout_constraintTop_toBottomOf="@+id/space"
                tools:text="15"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textView_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/button_skip"
                app:layout_constraintRight_toRightOf="@+id/button_skip"
                app:layout_constraintTop_toBottomOf="@+id/space"
                tools:text="3"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/textView_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/button_cancel"
                app:layout_constraintRight_toRightOf="@+id/button_cancel"
                app:layout_constraintTop_toBottomOf="@+id/space"
                tools:text="1"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_attend"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_attend"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/button_skip"
                app:layout_constraintTop_toBottomOf="@+id/textView_attend"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_skip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_skip"
                app:layout_constraintLeft_toRightOf="@+id/button_attend"
                app:layout_constraintRight_toLeftOf="@+id/button_cancel"
                app:layout_constraintTop_toTopOf="@+id/button_attend"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/label_cancel"
                app:layout_constraintLeft_toRightOf="@+id/button_skip"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/button_attend"/>

            <View
                android:id="@+id/separator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="@color/colorSeparator"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_attend"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separator"
                tools:text="You can safely skip the next 1 lecture"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</layout>